# RealTime-Sim-Camera

./: CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt  allegro_functions.h  thread_functions.h
src/: allegro_functions.c  camera.c  thread_functions.c
